Fix #4496 The correct fix to blurry rendering: width/height not rounded

--- a/viewer/latexworkshop.css
+++ b/viewer/latexworkshop.css
@@ -101,7 +101,6 @@ html[dir='rtl'] .findbar {
 
 :is(.pdfViewer .canvasWrapper) canvas{
     position: relative !important;
-    contain: none !important;
 }
 
 .pdfViewer.removePageBorders > .page:last-of-type,
